# sphinx-wagtail-theme

./: .editorconfig  .eslintignore  .eslintrc.json  .gitattributes  .gitignore  .readthedocs.yaml  .stylelintrc.json  AUTHORS.rst  Apache-License-2.0.txt  CHANGELOG.md  CHANGELOG.txt  CONTRIBUTING.md  CONTRIBUTING.rst  CONTRIBUTORS.md  ChangeLog.txt  Gruntfile.js  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  OFL-License.txt  README.md  README.rst  SECURITY.md  USAGE.rst  VERSION.txt  bower-2018-06-30.json  bower.json  my-sphinx-build.sh  netlify.toml  package-lock.json  package.json  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test_selenium.py  webpack.config.js
.github/: copilot-instructions.md
Documentation/: How-to-upload.rst
config/: jobfile-offline.json  jobfile-online.json  jobfile.json
demo_docs/: test.js
docs/: Makefile  changelog.md  conf.py  contributors.md  customizing.rst  development.rst  index.rst  installation.rst  make.bat  modules.rst  requirements.txt  sphinx_typo3_theme.rst  sphinx_typo3_theme.static.rst  sphinx_wagtail_theme.rst  sphinx_wagtail_theme.static.rst  workflows.rst
js/: blocking.js  theme.js  vendor.js
sass/: _base.scss  _component_admotion.scss  _component_autodoc.scss  _component_bignums.scss  _component_breadcrumb.scss  _component_button.scss  _component_copybutton.scss  _component_docutils.scss  _component_figure.scss  _component_footer.scss  _component_frame.scss  _component_header.scss  _component_horizbuttons.scss  _component_link.scss  _component_logo.scss  _component_math.scss  _component_page.scss  _component_panel.scss  _component_pygments.scss  (+36 more)
(+343 files in other folders)
