[metadata]
name = sphinx_wagtail_theme
version = 6.1.0
author = Coen van der Kamp
author_email = coen@fourdigits.nl
description = Sphinx Wagtail theme
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wagtail/sphinx_wagtail_theme
project_urls =
    Bug Tracker = https://github.com/wagtail/sphinx_wagtail_theme/issues
classifiers =
    Framework :: Sphinx
    Framework :: Sphinx :: Theme
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    Topic :: Documentation
    Topic :: Software Development :: Documentation


[options]
packages = find:
python_requires = >=3.8
include_package_data = True


[bdist_wheel]
universal = 1


[flake8]
exclude = .*,docs,node_modules,CVS,__pycache__,*.egg,*GENERATED*
max-line-length = 127


[tool:pytest]
# If a pytest section is found in one of the possible config files
# (pytest.ini, tox.ini or setup.cfg), then pytest will not look for any others,
# so if you add a pytest config section elsewhere,
# you will need to delete this section from setup.cfg.

norecursedirs =
    migrations

python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -ra
    --strict-markers
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short
testpaths =
    tests
